--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -159,7 +159,7 @@
     }
 
     label.mdui-textfield-label {
-    color: #e91e63 !important;
+    color: #ececec !important;
     }
     
     .clp {
