--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -159,7 +159,7 @@
     }
 
     label.mdui-textfield-label {
-    color: #ececec !important;
+    color: #e91e63 !important;
     }
     
     .clp {
@@ -232,6 +232,9 @@
 
     .mdui-menu{
       width: auto;  
+    }
+    .nprogress{
+      background: #ececec;  
     }
   </style>
   
