--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -12,7 +12,7 @@
 <!--IconValuesEnd-->
 
 <!DOCTYPE html>
-<html lang=en
+<html lang="<!--constStr@language-->">
 
 <head>
   <link rel="preconnect" href="//npm.elemecdn.com" />
