--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -41,7 +41,7 @@
   <link rel="stylesheet" href="//npm.elemecdn.com/@fontsource/fira-code@4.2.2/400.css" />
   <link rel="stylesheet" href="//npm.elemecdn.com/@highlightjs/cdn-assets/styles/github.min.css" />
 
-  <script src="//npm.elemecdn.com/dplayer/dist/DPlayer.min.js"></script>
+  <script src="//cdn.staticfile.net/dplayer/1.27.1/DPlayer.min.js"></script>
   <link rel="stylesheet" href="//npm.elemecdn.com/aplayer/dist/APlayer.min.css" />
   <script src="//npm.elemecdn.com/aplayer/dist/APlayer.min.js"></script>
   <script src="//npm.elemecdn.com/jsmediatags/dist/jsmediatags.min.js"></script>
