--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -23,6 +23,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#fff" />
 
+  <title><!--Title--></title>
+  <meta name="description" content="<!--Description-->" />
+
   <link rel="stylesheet" href="//one.spesn.eu.org/Static/app1@uw34ru4ehdn4pywddmebm79dnnb2jyei.css" />
   <link rel="stylesheet" href="//one.spesn.eu.org/Static/app2@eqge353pwpgivauvcvzejwrki4mdissj.css" />
 
