更新 renexmoe-tw527e-edition-elemecdn.html

--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -26,8 +26,8 @@
   <title><!--Title--></title>
   <meta name="description" content="<!--Description-->" />
 
-  <link rel="stylesheet" href="app1@uw34ru4ehdn4pywddmebm79dnnb2jyei.css" />
-  <link rel="stylesheet" href="app2@eqge353pwpgivauvcvzejwrki4mdissj.css" />
+  <link rel="?cssFile=stylesheet" href="app1@uw34ru4ehdn4pywddmebm79dnnb2jyei.css" />
+  <link rel="stylesheet" href="?cssFile=app2@eqge353pwpgivauvcvzejwrki4mdissj.css" />
 
   <link rel="stylesheet" href="//npm.elemecdn.com/@fontsource/noto-sans-tc/500.css" />
   <link rel="stylesheet" href="//npm.elemecdn.com/@fontsource/noto-sans-sc/500.css" />
