--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -1,11 +1,9 @@
 <html>
-<meta name="robots" content="noindex">
-<meta name="viewport" content="width=device-width, initial-scale=5.0, maximum-scale=1.0, shrink-to-fit=no">
-
 <head>
+    <meta name="robots" content="noindex">
+    <meta name="viewport" content="width=device-width, initial-scale=5.0, maximum-scale=1.0, shrink-to-fit=no">
     <title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
 </head>
-
 <body>
     <h1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></h1>
     <hr>
@@ -21,12 +19,11 @@
             <td align="right">-</td>
         </tr><!--FolderListEnd--><!--FileListStart-->
         <tr>
-            <td><a href="<!--FileEncodeReplaceUrl-->" target="_blank"><!--FileEncodeReplaceName--></a></td>
+            <td><a href="javascript:void(0);" onclick="window.open('<!--FileEncodeReplaceUrl-->', '_blank');"><!--FileEncodeReplaceName--></a></td>
             <td align="right"><!--lastModifiedDateTime--></td>
             <td align="right"><!--size--></td>
         </tr><!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
     </table>
     <hr>
 </body>
-
 </html>
