--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -29,6 +29,7 @@
             <td>
                 <!-- 判断文件类型，只有图片文件才能预览 -->
                 <a href="<!--FileEncodeReplaceUrl-->" 
+                   target="_blank" 
                    onclick="return isImage('<!--FileEncodeReplaceName-->');">
                     <!--FileEncodeReplaceName-->
                 </a>
