--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -4,6 +4,38 @@
 
 <head>
     <title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
+    <style>
+        /* 模态框样式 */
+        .modal {
+            display: none; /* 隐藏模态框 */
+            position: fixed; /* 固定位置 */
+            z-index: 1000; /* 置于顶部 */
+            left: 0;
+            top: 0;
+            width: 100%; /* 全宽 */
+            height: 100%; /* 全高 */
+            overflow: auto; /* 启用滚动 */
+            background-color: rgb(0,0,0); /* 背景颜色 */
+            background-color: rgba(0,0,0,0.9); /* 背景透明 */
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%; /* 宽度 */
+            max-width: 700px; /* 最大宽度 */
+        }
+
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: white;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
@@ -27,10 +59,7 @@
         <!--FileListStart-->
         <tr>
             <td>
-                <!-- 判断文件类型，只有图片文件才能预览 -->
-                <a href="<!--FileEncodeReplaceUrl-->" 
-                   target="_blank" 
-                   onclick="return isImage('<!--FileEncodeReplaceName-->');">
+                <a href="#" onclick="return handleFileClick('<!--FileEncodeReplaceUrl-->', '<!--FileEncodeReplaceName-->');">
                     <!--FileEncodeReplaceName-->
                 </a>
             </td>
@@ -44,18 +73,19 @@
     <hr>
 
     <script>
-        // 判断文件是否为图片类型
-        function isImage(fileName) {
+        // 处理文件点击事件
+        function handleFileClick(fileUrl, fileName) {
             const imageExtensions = ['jpg', 'jpeg', 'png', 'gif', 'bmp', 'webp'];
             const extension = fileName.split('.').pop().toLowerCase();
+
             if (imageExtensions.includes(extension)) {
-                // 如果是图片，允许链接跳转
-                return true;
+                // 如果是图片，打开新标签页
+                window.open(fileUrl, '_blank');
             } else {
-                // 如果不是图片，阻止默认行为
+                // 如果不是图片，弹出提示
                 alert('此文件无法预览。');
-                return false;
             }
+            return false; // 防止默认行为
         }
     </script>
 </body>
