--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -19,6 +19,13 @@
         }
       }
     </script>
+    <style>
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #000000;
+    }
+}
+    </style>
 </head>
 
 <body>
