--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -25,6 +25,12 @@
         background-color: #000000;
     }
 }
+td {
+    color: #ffffff;
+}
+h1 {
+    color: #ffffff;
+}
     </style>
 </head>
 
