--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -22,17 +22,17 @@
     <style>
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #000000;
+        background-color: #121212;
     }
-}
 td {
-    color: #ffffff;
+    color: #f0f0f0;
 }
 h1 {
-    color: #ffffff;
+    color: #f0f0f0;
 }
 a {
-    color: #a7a7ff !important;
+    color: #8585cd !important;
+}
 }
     </style>
 </head>
