--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -3,60 +3,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=5.0, maximum-scale=1.0, shrink-to-fit=no">
 
 <head>
-    <title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
-    <script>
-      function showImage(url) {
-        var ext = url.split('.').pop().toLowerCase();
-        if (ext == 'jpg' || ext == 'jpeg' || ext == 'png' || ext == 'gif' || ext == 'bmp') {
-          var img = new Image();
-          img.src = url;
-          var w = window.open("", "_blank");
-          w.document.write("<html><body><img src='" + url + "' /></body></html>");
-          w.document.close();
-          return false;
-        } else {
-          return true;
-        }
-      }
-    </script>
-    <style>
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #121212;
-    }
-    td {
-        color: #f0f0f0;
-    }
-    h1 {
-        color: #f0f0f0;
-    }
-    a {
-        color: #9f9fff !important;
-    }
-}
-    </style>
+<title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
 </head>
 
 <body>
-    <H1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></H1>
-    <hr>
-    <table><!--BackArrowStart-->
-        <tr>
-            <td colspan="3"><A HREF="<!--BackArrowUrl-->">../</A></td>
-        </tr>
-        <!--BackArrowEnd--><!--ListStart--><!--IsFolderStart--><!--FolderListStart-->
-        <tr>
-            <td><A HREF="<!--FileEncodeReplaceUrl-->/"><!--FileEncodeReplaceName-->/</A></td>
-            <td align="right"><!--lastModifiedDateTime--></td>
-            <td align="right">-</td>
-        </tr><!--FolderListEnd--><!--FileListStart-->
-        <tr>
-            <td><A HREF="<!--FileEncodeReplaceUrl-->" onclick="return showImage(this.href);"><!--FileEncodeReplaceName--></A></td>
-            <td align="right"><!--lastModifiedDateTime--></td>
-            <td align="right"><!--size--></td>
-        </tr><!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
-    </table>
-    <hr>
+<H1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></H1>
+<hr>
+<table>
+  <!--BackArrowStart-->
+  <tr>
+    <td colspan="3"><A HREF="<!--BackArrowUrl-->">../</A></td>
+  </tr>
+  <!--BackArrowEnd-->
+  <!--ListStart-->
+  <!--IsFolderStart-->
+  <!--FolderListStart-->
+  <tr>
+    <td><A HREF="<!--FileEncodeReplaceUrl-->/" target="_blank" rel="lightbox"><!--FileEncodeReplaceName-->/</A></td>
+    <td align="right"><!--lastModifiedDateTime--></td>
+    <td align="right">-</td>
+  </tr>
+  <!--FolderListEnd-->
+  <!--FileListStart-->
+  <tr>
+    <td><A HREF="<!--FileEncodeReplaceUrl-->" target="_blank" rel="lightbox"><!--FileEncodeReplaceName--></A></td>
+    <td align="right"><!--lastModifiedDateTime--></td>
+    <td align="right"><!--size--></td>
+  </tr>
+  <!--FileListEnd-->
+  <!--IsFolderEnd-->
+  <!--ListEnd-->
+</table>
+<hr>
 </body>
 
 </html>
