--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -9,30 +9,21 @@
 <body>
 <H1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></H1>
 <hr>
-<table>
-  <!--BackArrowStart-->
-  <tr>
-    <td colspan="3"><A HREF="<!--BackArrowUrl-->">../</A></td>
-  </tr>
-  <!--BackArrowEnd-->
-  <!--ListStart-->
-  <!--IsFolderStart-->
-  <!--FolderListStart-->
-  <tr>
-    <td><A HREF="<!--FileEncodeReplaceUrl-->/" target="_blank" rel="lightbox"><!--FileEncodeReplaceName-->/</A></td>
-    <td align="right"><!--lastModifiedDateTime--></td>
-    <td align="right">-</td>
-  </tr>
-  <!--FolderListEnd-->
-  <!--FileListStart-->
-  <tr>
-    <td><A HREF="<!--FileEncodeReplaceUrl-->" target="_blank" rel="lightbox"><!--FileEncodeReplaceName--></A></td>
-    <td align="right"><!--lastModifiedDateTime--></td>
-    <td align="right"><!--size--></td>
-  </tr>
-  <!--FileListEnd-->
-  <!--IsFolderEnd-->
-  <!--ListEnd-->
+<table><!--BackArrowStart-->
+<tr>
+<td colspan="3"><A HREF="<!--BackArrowUrl-->">../</A></td>
+</tr>
+<!--BackArrowEnd--><!--ListStart--><!--IsFolderStart--><!--FolderListStart-->
+<tr>
+<td><A HREF="<!--FileEncodeReplaceUrl-->/"><!--FileEncodeReplaceName-->/</A></td>
+<td align="right"><!--lastModifiedDateTime--></td>
+<td align="right">-</td>
+</tr><!--FolderListEnd--><!--FileListStart-->
+<tr>
+<td><A HREF="<!--FileEncodeReplaceUrl-->" target="_blank" rel="noopener noreferrer"><!--FileEncodeReplaceName--></A></td>
+<td align="right"><!--lastModifiedDateTime--></td>
+<td align="right"><!--size--></td>
+</tr><!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
 </table>
 <hr>
 </body>
