--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -20,12 +20,23 @@
 <td align="right">-</td>
 </tr><!--FolderListEnd--><!--FileListStart-->
 <tr>
-<td><A HREF="<!--FileEncodeReplaceUrl-->" target="_blank" rel="noopener noreferrer"><!--FileEncodeReplaceName--></A></td>
+<td><A HREF="<!--FileEncodeReplaceUrl-->" rel="noopener noreferrer" target="_blank" download=""><!--FileEncodeReplaceName--></A></td>
 <td align="right"><!--lastModifiedDateTime--></td>
 <td align="right"><!--size--></td>
 </tr><!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
 </table>
 <hr>
+
+<script>
+  const links = document.querySelectorAll('a[href$=".jpg"], a[href$=".jpeg"], a[href$=".png"], a[href$=".gif"]');
+
+  links.forEach(link => {
+    link.rel = "noopener noreferrer";
+    link.target = "_blank";
+    link.download = "";
+  });
+</script>
+
 </body>
 
 </html>
