--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -3,40 +3,57 @@
 <meta name="viewport" content="width=device-width, initial-scale=5.0, maximum-scale=1.0, shrink-to-fit=no">
 
 <head>
-<title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        // 获取所有的文件链接
-        const links = document.querySelectorAll("a[href$='.jpg'], a[href$='.png'], a[href$='.gif']"); // 根据需要添加文件格式
-        links.forEach(link => {
-            link.addEventListener("click", function(event) {
-                event.preventDefault(); // 阻止默认下载行为
-                window.open(link.href, '_blank'); // 在新窗口打开链接
-            });
-        });
-    });
-</script>
+    <title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
+    <script>
+      function showImage(url) {
+        var ext = url.split('.').pop().toLowerCase();
+        if (ext === 'jpg' || ext === 'jpeg' || ext === 'png' || ext === 'gif' || ext === 'bmp') {
+          var w = window.open("", "_blank");
+          w.document.write("<html><head><title>Image Preview</title></head><body style='margin:0;text-align:center;'><img src='" + url + "' style='max-width:100%;max-height:100%;'/></body></html>");
+          w.document.close();
+          return false; // Prevent the default link action
+        } else {
+          return true; // Allow the default action for non-image links
+        }
+      }
+    </script>
+    <style>
+      @media (prefers-color-scheme: dark) {
+          body {
+              background-color: #121212;
+          }
+          td {
+              color: #f0f0f0;
+          }
+          h1 {
+              color: #f0f0f0;
+          }
+          a {
+              color: #9f9fff !important;
+          }
+      }
+    </style>
 </head>
 
 <body>
-<H1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></H1>
-<hr>
-<table><!--BackArrowStart-->
-<tr>
-<td colspan="3"><A HREF="<!--BackArrowUrl-->">../</A></td>
-</tr>
-<!--BackArrowEnd--><!--ListStart--><!--IsFolderStart--><!--FolderListStart-->
-<tr>
-<td><A HREF="<!--FileEncodeReplaceUrl-->/"><!--FileEncodeReplaceName-->/</A></td>
-<td align="right"><!--lastModifiedDateTime--></td>
-<td align="right">-</td>
-</tr><!--FolderListEnd--><!--FileListStart-->
-<tr>
-<td><A HREF="<!--FileEncodeReplaceUrl-->" target="_blank"><!--FileEncodeReplaceName--></A></td> <!-- 添加target属性 -->
-<td align="right"><!--lastModifiedDateTime--></td>
-<td align="right"><!--size--></td>
-</tr><!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
-</table>
-<hr>
+    <H1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></H1>
+    <hr>
+    <table><!--BackArrowStart-->
+        <tr>
+            <td colspan="3"><A HREF="<!--BackArrowUrl-->">../</A></td>
+        </tr>
+        <!--BackArrowEnd--><!--ListStart--><!--IsFolderStart--><!--FolderListStart-->
+        <tr>
+            <td><A HREF="<!--FileEncodeReplaceUrl-->/"><!--FileEncodeReplaceName-->/</A></td>
+            <td align="right"><!--lastModifiedDateTime--></td>
+            <td align="right">-</td>
+        </tr><!--FolderListEnd--><!--FileListStart-->
+        <tr>
+            <td><A HREF="<!--FileEncodeReplaceUrl-->" onclick="return showImage(this.href);"><!--FileEncodeReplaceName--></A></td>
+            <td align="right"><!--lastModifiedDateTime--></td>
+            <td align="right"><!--size--></td>
+        </tr><!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
+    </table>
+    <hr>
 </body>
 </html>
