--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -8,10 +8,7 @@
       function showImage(url) {
         var ext = url.split('.').pop().toLowerCase();
         if (ext === 'jpg' || ext === 'jpeg' || ext === 'png' || ext === 'gif' || ext === 'bmp') {
-          var w = window.open("", "_blank");
-          w.document.write("<html><head><title>Image Preview</title></head><body style='margin:0;text-align:center;'><img src='" + url + "' style='max-width:100%;max-height:100%;'/></body></html>");
-          w.document.close();
-          w.location.href = url; // Set the image URL directly
+          var w = window.open(url, "_blank"); // Open the image URL directly
           return false; // Prevent the default link action
         } else {
           return true; // Allow the default action for non-image links
