--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -8,7 +8,9 @@
       function showImage(url) {
         var ext = url.split('.').pop().toLowerCase();
         if (ext === 'jpg' || ext === 'jpeg' || ext === 'png' || ext === 'gif' || ext === 'bmp') {
-          var w = window.open(url, "_blank"); // Open the image URL directly
+          var w = window.open("", "_blank");
+          w.document.write("<html><head><title>Image Preview</title></head><body style='margin:0;display:flex;justify-content:center;align-items:center;height:100vh;'><iframe src='" + url + "' style='border:none;width:100%;height:100%;'></iframe></body></html>");
+          w.document.close();
           return false; // Prevent the default link action
         } else {
           return true; // Allow the default action for non-image links
