--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -11,7 +11,39 @@
         
         if (imageTypes.includes(ext)) {
           var w = window.open("", "_blank");
-          w.document.write("<html><head><title>Image Preview</title></head><body style='margin:0;display:flex;justify-content:center;align-items:center;height:100vh;background-color:#000;'><img src='" + url + "' style='max-width:100%;max-height:100%;' /></body></html>");
+          w.document.write(`
+            <html>
+              <head>
+                <title>Image Preview</title>
+                <style>
+                  body {
+                    margin: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100vh;
+                  }
+                  @media (prefers-color-scheme: dark) {
+                    body {
+                      background-color: #000;
+                    }
+                  }
+                  @media (prefers-color-scheme: light) {
+                    body {
+                      background-color: #fff;
+                    }
+                  }
+                  img {
+                    max-width: 100%;
+                    max-height: 100%;
+                  }
+                </style>
+              </head>
+              <body>
+                <img src='${url}' />
+              </body>
+            </html>
+          `);
           w.document.close();
           return false; // 阻止默认行为
         } else {
