--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -14,7 +14,7 @@
           w.document.write(`
             <html>
               <head>
-                <title>${name}</title>
+                <title>img</title>
                 <style>
                   body {
                     margin: 0;
