--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -1,53 +1,99 @@
 <html>
 <meta name="robots" content="noindex">
 <meta name="viewport" content="width=device-width, initial-scale=5.0, maximum-scale=1.0, shrink-to-fit=no">
+
 <head>
     <title><!--Sitename--> - /<!--PathArrayStart--><!--PathArrayName-->/<!--PathArrayEnd--></title>
-    <style>
-        /* 样式用于 iframe 的展示 */
-        #preview {
-            display: none; /* 默认隐藏 */
-            width: 100%;
-            height: 500px; /* 可以根据需要调整高度 */
-            border: 1px solid #ccc;
-            margin-top: 20px;
-        }
-    </style>
     <script>
-        function previewImage(url) {
-            var iframe = document.getElementById('preview');
-            iframe.src = url + '?preview'; // 添加 ?preview 参数
-            iframe.style.display = 'block'; // 显示 iframe
+      function showImage(url) {
+        var ext = url.split('.').pop().toLowerCase();
+        var imageTypes = ['jpg', 'jpeg', 'png', 'gif', 'bmp'];
+
+        if (imageTypes.includes(ext)) {
+          // 修改地址为文件链接?preview
+          history.pushState(null, '', url + '?preview');
+
+          // 重写页面内容
+          document.body.innerHTML = `
+            <html>
+              <head>
+                <title>img</title>
+                <style>
+                  body {
+                    margin: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100vh;
+                  }
+                  @media (prefers-color-scheme: dark) {
+                    body {
+                      background-color: #000;
+                    }
+                  }
+                  @media (prefers-color-scheme: light) {
+                    body {
+                      background-color: #fff;
+                    }
+                  }
+                  img {
+                    max-width: 100%;
+                    max-height: 100%;
+                  }
+                </style>
+              </head>
+              <body>
+                <img src='${url}' />
+              </body>
+            </html>
+          `;
+          return false; // 阻止默认行为
+        } else {
+          return true; // 允许默认行为
         }
+      }
     </script>
+    <style>
+      @media (prefers-color-scheme: dark) {
+        body {
+            background-color: #121212;
+        }
+        td {
+            color: #f0f0f0;
+        }
+        h1 {
+            color: #f0f0f0;
+        }
+        a {
+            color: #9f9fff !important;
+        }
+      }
+    </style>
 </head>
+
 <body>
     <h1><!--Sitename--> - /<!--DiskPathArrayStart--><!--PathArrayName-->/<!--DiskPathArrayEnd--></h1>
     <hr>
     <table>
-    <!--BackArrowStart-->
-        <tr><td colspan="3"><a href="<!--BackArrowUrl-->">../</a></td></tr>
-    <!--BackArrowEnd-->
-    <!--ListStart-->
-    <!--IsFolderStart-->
-    <!--FolderListStart-->
-        <tr><td><a href="<!--FileEncodeReplaceUrl__Folder-->"><!--FileEncodeReplaceName-->/</a></td><td align="right"><!--lastModifiedDateTime--></td><td align="right">-</td></tr>
-    <!--FolderListEnd-->
-    <!--FileListStart-->
+        <!--BackArrowStart-->
         <tr>
-            <td>
-                <a href="javascript:void(0);" onclick="previewImage('<!--FileEncodeReplaceUrl-->')"><!--FileEncodeReplaceName--></a>
-            </td>
+            <td colspan="3"><a href="<!--BackArrowUrl-->">../</a></td>
+        </tr>
+        <!--BackArrowEnd--><!--ListStart--><!--IsFolderStart--><!--FolderListStart-->
+        <tr>
+            <td><a href="<!--FileEncodeReplaceUrl-->/"> <!--FileEncodeReplaceName--> /</a></td>
+            <td align="right"><!--lastModifiedDateTime--></td>
+            <td align="right">-</td>
+        </tr>
+        <!--FolderListEnd--><!--FileListStart-->
+        <tr>
+            <td><a href="<!--FileEncodeReplaceUrl-->" onclick="return showImage(this.href);"><!--FileEncodeReplaceName--></a></td>
             <td align="right"><!--lastModifiedDateTime--></td>
             <td align="right"><!--size--></td>
         </tr>
-    <!--FileListEnd-->
-    <!--IsFolderEnd-->
-    <!--ListEnd-->
+        <!--FileListEnd--><!--IsFolderEnd--><!--ListEnd-->
     </table>
     <hr>
-    
-    <!-- 用于显示预览的 iframe -->
-    <iframe id="preview"></iframe>
 </body>
+
 </html>
