--- a/theme/nginx-3plus.html
+++ b/theme/nginx-3plus.html
@@ -10,7 +10,8 @@
         var imageTypes = ['jpg', 'jpeg', 'png', 'gif', 'bmp'];
         
         if (imageTypes.includes(ext)) {
-          var w = window.open("", "_blank");
+          var previewUrl = url + '?preview';
+          var w = window.open(previewUrl, "_blank");
           w.document.write(`
             <html>
               <head>
